[package]
name = "skia-gl"
version = "0.1.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.33", features = ["bundled", "static-link"] }
skia-safe = { version = "0.27", features = ["gl"] }
gl = "0.14"
